--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link href="%PUBLIC_URL%/logo192.png" rel="apple-touch-icon"/>
     <link href="%PUBLIC_URL%/manifest.json" rel="manifest"/>
     <link href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" rel="stylesheet"/>
-    <title>React App</title>
+    <title>Pokepedia</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
